# AI_agent

./: README.md  metadata.json  server.ts
ai_agent/: README.md  call_function.py  config.py  main.py  prompts.py  pyproject.toml
ai_agent/functions/: get_file_content.py  get_files_info.py  run_python.py  write_file.py
calculator/: main.py  tests.py
calculator/pkg/: calculator.py  render.py
src/: App.tsx  index.css
