[project]
name = "ai_agent"
version = "0.1.0"
description = "Autonomous AI Coding Agent powered by Google Gemini"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
